--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,10 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'app-bundle' %> 
   </head>
 
   <body>
-   <%= javascript_pack_tag 'hello-world-bundle' %> 
    <%= yield %>
   </body>
 </html>
