--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
 
   <body>
     <%= react_component("Navbar", props: @props, prerender: false) %>
-    <%= yield %>
+    <div class="py-5">
+      <%= yield %>
+    </div>
   </body>
 </html>
