--- a/app/views/users/shared/_user_authentication_form.html.erb
+++ b/app/views/users/shared/_user_authentication_form.html.erb
@@ -13,7 +13,7 @@
 
       <div class="form-group">
         <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" required %>
       </div>
 
       <div class="form-group">
@@ -22,7 +22,7 @@
         <% if type == :registration && @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        <%= f.password_field :password, autocomplete: "off", class: "form-control" required %>
       </div>
 
       <% if type == :login && devise_mapping.rememberable? -%>
@@ -35,7 +35,7 @@
       <% if type == :registration %>
         <div class="form-group">
           <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" required %>
         </div>
       <% end %>
 
