a whole bunch fo stuff

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("EntryForm", props: { entry: @entry }, prerender: false) %>
+<%= react_component("EntryPage", props: { entry: @entry }, prerender: false) %>
