pass user_id and current user to entries component

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("Entries", props: { entries: @entries }, prerender: false) %>
+<%= react_component("Entries", props: { entries: @entries, userID: @user_id, currentUser: current_user }, prerender: false) %>
