--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("Entries", props: { entries: @entries, userID: @user_id, currentUser: current_user }, prerender: false) %>
+<%= react_component("Entries", props: { entries: @entries, user: @user, currentUser: current_user }, prerender: false) %>
