pass messages and entries to front page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("FrontPage", prerender: false) %>
+<%= react_component("FrontPage", entries: @entries, messages: @messages, prerender: false) %>
