--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("EntryPage", props: { entry: @entry, editMode: true }, prerender: false) %>
+<%= react_component("EntryPage", props: { entry: @entry, editMode: true, currentUser: current_user }, prerender: false) %>
