--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("FrontPage", props: { entries: @entries, messages: @messages}, prerender: false) %>
+<%= react_component("FrontPage", props: { entries: @entries, comments: @comments}, prerender: false) %>
