pass current user to front page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("FrontPage", props: { entries: @entries, comments: @comments, numEntryPages: @num_entry_pages, currentEntryPage: @current_entry_page, entryStartPage: @entry_start_page, entryEndPage: @entry_end_page }, prerender: false) %>
+<%= react_component("FrontPage", props: { entries: @entries, comments: @comments, numEntryPages: @num_entry_pages, currentEntryPage: @current_entry_page, entryStartPage: @entry_start_page, entryEndPage: @entry_end_page, currentUser: current_user }, prerender: false) %>
