--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("EntryForm", props: { entry: @entry, currentUser: current_user }, prerender: false) %>
+<%= react_component("EntryPage", props: { entry: @entry, currentUser: current_user, editMode: true }, prerender: false) %>
