--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("EntriesPage", props: { entries: @entries, user: @user, currentUser: current_user, numEntryPages: @num_entry_pages, numCommentPages: @num_comment_pages }, prerender: false) %>
+<%= react_component("EntriesPage", props: { entries: @entries, user: @user, currentUser: current_user, paginationDetails: @pagination_details }, prerender: false) %>
