adds profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("ProfilePage", props: { user: @user, currentUser: current_user, editMode: false }, prerender: false) %>
+<%= react_component("ProfilePage", props: { user: @user, currentUser: current_user, editMode: @edit_mode }, prerender: false) %>
