--- a/app/views/users/shared/_user_authentication_form.html.erb
+++ b/app/views/users/shared/_user_authentication_form.html.erb
@@ -12,8 +12,13 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
+        <%= f.label :username %>
+        <%= f.text_field :username, autofocus: true, autocomplete: "on", class: "form-control", required: true %>
+      </div>
+
+      <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", required: true %>
+        <%= f.email_field :email, autofocus: true, autocomplete: "on", class: "form-control", required: true %>
       </div>
 
       <div class="form-group">
