more friendships stuff

--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -1,15 +1,15 @@
 <% if flash[:success] %>
-  <div class="flash flash--success">
+  <div class="flash flash--success mb-5">
     <%= flash[:success] %>
   </div>
 <% end %>
 <% if flash[:notice] %>
-  <div class="flash flash--notice">
+  <div class="flash flash--notice mb-5">
     <%= flash[:notice] %>
   </div>
 <% end %>
 <% if flash[:alert] %>
-  <div class="flash flash--alert">
+  <div class="flash flash--alert mb-5">
     <%= flash[:alert] %>
   </div>
 <% end %>
