--- a/app/views/users/shared/_user_authentication_form.html.erb
+++ b/app/views/users/shared/_user_authentication_form.html.erb
@@ -2,12 +2,6 @@
   <div class="col-6">
     <h2 class="text-center"><%= heading %></h2>
 
-    <% if flash.alert %>
-      <div class="alert alert-danger" >
-        <%= flash.alert %>
-      </div>
-    <% end %>
-
     <%= form_for(resource, as: resource_name, url: url) do |f| %>
       <%= devise_error_messages! %>
 
@@ -16,10 +10,12 @@
         <%= f.text_field :username, autofocus: true, autocomplete: "on", class: "form-control", required: true %>
       </div>
 
-      <div class="form-group">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, autocomplete: "on", class: "form-control", required: true %>
-      </div>
+      <% if type == :registration -%>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: "on", class: "form-control", required: true %>
+        </div>
+      <% end %>
 
       <div class="form-group">
         <%= f.label :password %>
